# Python-Bot

./: .breakpoints  Album.txt  Artist_Query.json  Example.txt  Movie.json  Notes.txt  RandomPercentage.py  Snippets.txt  SongsFile.txt  Suggested.txt  Table.txt  keep_alive.py  main.py  membersList.txt  output.html  pyproject.toml  requirements.txt  test.json
cogs/: Purge.py  gey.py  phrases.py  ping.py  rps.py  rpsInfo.py
