[tool.poetry]
name = "python-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
bs4 = "^0.0.1"
spotipy = "^2.19.0"
pyping = "^0.0.6"
ping3 = "^3.0.2"
pythonping = "^1.1.0"
imdb-cli-tool = "^1.0.1"
omdbapi = "^0.6.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
